--- a/src/App.css
+++ b/src/App.css
@@ -4,9 +4,13 @@
 }
 
 .container {
-  height: 700px;
+  height: 100vmax;
   background-color: #232426;
   background-image: url("https://www.transparenttextures.com/patterns/clean-gray-paper.png");
+}
+
+.textStyling {
+  text-shadow: mintcream;
 }
 
 .App-logo {
@@ -42,4 +46,15 @@
   box-shadow: 0 2px #999;
   outline: none;
   transform: translateY(3px);
+}
+
+.bpmBox {
+  font-size: 20px;
+  outline: none;
+  border: none;
+}
+
+.titleDrummer {
+  font-size: 36px;
+  padding: 15px;
 }
