--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,7 @@
 }
 
 .container {
-  height: 100vmax;
+  height: 100vh;
   background-color: #232426;
   background-image: url("https://www.transparenttextures.com/patterns/clean-gray-paper.png");
 }
