--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,7 @@
 
 .container {
   height: 100vh;
+  min-width: 400px;
   background-color: #232426;
   background-image: url("https://www.transparenttextures.com/patterns/clean-gray-paper.png");
 }
